# VideoConference

./: CMakeLists.txt  README.md
Headers/: PcmCaptureDevice.hpp  PcmDevice.hpp  PcmDeviceException.hpp  PcmPlaybackDevice.hpp
Src/: PcmCaptureDevice.cpp  PcmDevice.cpp  PcmPlaybackDevice.cpp  main.cpp
